# gba

./: CMakeLists.txt  README.md  main.cxx  meson.build
include/: arm7tdmi.hxx  bitutil.hxx  cpu_state.hxx  instruction_definition.hxx  instructions.cxx  io_map.hxx  meson.build  types.hxx
src/: CMakeLists.txt  arm7tdmi.cxx  bitutil.cppm  main.cxx  meson.build  types.cppm
src/arm7tdmi/: arm7tdmi.cppm  cpu_state.cppm  exception.cppm  gba_memory.cppm  instruction.cppm  instruction_definition.cppm  instructions.cppm  memory.cppm  mode.cppm
src/arm7tdmi/arm/: branch.cppm  clz.cppm  data_processing.cppm  instruction.cppm  mov.cppm  mul.cppm  operands.cppm  swap.cppm  swi.cppm
src/arm7tdmi/thumb/: instruction.cppm
src/gba/: io_map.cppm  memory.cppm  mmap.cppm  render.cppm
src/gba/io/: io.cppm  memory.cppm  register_map.cppm
test/: CMakeLists.txt
test/arm7tdmi/: cpu_state.cpp  cpu_state.cppm  test_utils.cppm
test/arm7tdmi/arm/: branch.cppm  branch_test.cppm  clz.cppm  data_processing.cppm  mov.cppm  mul.cppm  operand.cppm  swap.cppm  swi.cppm
test/arm7tdmi/thumb/: branch.cppm  data_processing.cppm  shift_imm.cppm
util/: io_map.txt  io_map_parse.py
